--- a/app/views/users/create.js.erb
+++ b/app/views/users/create.js.erb
@@ -3,5 +3,5 @@
   resize_fancybox();
 <% else %>
   $.fancybox.close();
-  window.location.replace('<%= session[:return_to].nil? ? root_path : session[:return_to] %>');
+  location.replace('<%= session[:return_to].nil? ? root_path : session[:return_to] %>');
 <% end %>
