Added :disable_with => 'Submitting...' to all form submit tags.

--- a/app/views/communities/_form.html.erb
+++ b/app/views/communities/_form.html.erb
@@ -29,6 +29,6 @@
   <% end %>
   
   <div class="actions">
-    <%= f.submit action_name == 'new' ? 'Create' : 'Update', :class => 'button' %>
+    <%= f.submit action_name == 'new' ? 'Create' : 'Update', :disable_with => 'Submitting...', :class => 'button' %>
   </div>
 <% end %>
