--- a/app/views/feedback/_form.html.erb
+++ b/app/views/feedback/_form.html.erb
@@ -5,6 +5,6 @@
   </div>
   
   <div class="action">
-    <%= submit_tag 'Send', :class => 'button' %>
+    <%= submit_tag 'Send', :disable_with => 'Submitting...', :class => 'button' %>
   </div>
 <% end %>
