--- a/app/views/invitations/new.html.erb
+++ b/app/views/invitations/new.html.erb
@@ -9,6 +9,6 @@
   </div>
   
   <div class="actions">
-    <%= submit_tag 'Send Invitations', :class => 'button' %>
+    <%= submit_tag 'Send Invitations', :disable_with => 'Submitting...', :class => 'button' %>
   </div>
 <% end %>
