--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -29,6 +29,6 @@
   </div>
   
   <div class="action">
-    <%= f.submit "Register", :class => 'button' %>
+    <%= f.submit "Register", :disable_with => 'Submitting...', :class => 'button' %>
   </div>
 <% end %>
