--- a/app/views/postings/_form.html.erb
+++ b/app/views/postings/_form.html.erb
@@ -47,6 +47,6 @@
   <%= f.hidden_field :user_id, :value => current_user.id %>
   
   <div class="actions">
-    <%= f.submit 'Post', :class => 'button' %>
+    <%= f.submit action_name == 'new' ? 'Post' : 'Update', :disable_with => 'Submitting...', :class => 'button' %>
   </div>
 <% end %>
