--- a/app/views/notifier/offer.html.erb
+++ b/app/views/notifier/offer.html.erb
@@ -12,7 +12,7 @@ Hi <%= @to_user.first_name %>,<br/><br/>
   and would like to help you out.
 <% end %>
 
-<% if not @message.blank? %>
+<% unless @message.blank? %>
   They want you to know that:
   <p><%= @message %></p>
 <% end %>
